--- a/Projects/01-Cities-Project/package.json
+++ b/Projects/01-Cities-Project/package.json
@@ -21,6 +21,7 @@
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
+    "styled-components": "^5.3.3",
     "web-vitals": "^1.1.2",
     "yup": "^0.32.11"
   },
